--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,26 @@
-html{
-    background-color: rgba(23, 103, 216, 0.748);
-}
+body {
+    --bg: rgba(242, 242, 248, 0.938);
+    --nav: rgb(17, 110, 193);
+    --textNormal: #222;
+    --textTitle: #222;
+    --textLink: blue;
+    --hr: hsla(0, 0%, 0%, 0.2);
+  
+    background-color: var(--bg);
+  }
+  
+  body.dark {
+    -webkit-font-smoothing: antialiased;
+    --nav : black;
+    --bg: rgb(62, 53, 53);
+    --textNormal: rgba(255, 255, 255, 0.88);
+    --textTitle: white;
+    --textLink: yellow;
+    --hr: hsla(0, 0%, 100%, 0.2);
+  }
+  
+
+
+  
+  
+ 
