--- a/src/components/nav/darkToggle.css
+++ b/src/components/nav/darkToggle.css
@@ -5,7 +5,7 @@
     width: 5em;
     height: 2em;
     margin: 0 10px;
-    margin-top: -5%;
+    margin-top: -15%;
   }
   
   /* Hide default HTML checkbox */
@@ -36,7 +36,7 @@
     width: 45%;
     left: 4px;
     bottom: 4px;
-    -webkit-transition: .4s;
+    -webkit-transition: 1.2s;
     transition: 1.2s;
   }
   input:checked + .slider {
