playing with tv

--- a/src/components/test-carousel/slick.css
+++ b/src/components/test-carousel/slick.css
@@ -1,25 +1,226 @@
+
+
+
+
+/* Arrows */
+.slick-prev,
+.slick-next
+{
+    font-size: 0;
+    line-height: 0;
+
+    position: absolute;
+    top: 50%;
+
+    display: block;
+
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+
+    cursor: pointer;
+
+    color: transparent;
+    border: none;
+    outline: none;
+    background: transparent;
+}
+
+.slick-prev:hover:before,
+.slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before
+{
+    opacity: 1;
+}
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before
+{
+    opacity: .25;
+}
+
+.slick-prev:before,
+.slick-next:before
+{
+    font-family: 'slick';
+    font-size: 20px;
+    line-height: 1;
+
+    opacity: .75;
+    color: white;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev
+{
+    left: -25px;
+}
+[dir='rtl'] .slick-prev
+{
+    right: -25px;
+    left: auto;
+}
+.slick-prev:before
+{
+    content: '←';
+}
+[dir='rtl'] .slick-prev:before
+{
+    content: '→';
+}
+
+.slick-next
+{
+    right: -25px;
+}
+[dir='rtl'] .slick-next
+{
+    right: auto;
+    left: -25px;
+}
+.slick-next:before
+{
+    content: '→';
+}
+[dir='rtl'] .slick-next:before
+{
+    content: '←';
+}
+
+/* Dots */
+.slick-dotted.slick-slider
+{
+    margin-bottom: 30px;
+}
+
+.slick-dots
+{
+    position: absolute;
+    bottom: -25px;
+
+    display: block;
+
+    width: 100%;
+    padding: 0;
+    margin: 0;
+
+    list-style: none;
+
+    text-align: center;
+}
+.slick-dots li
+{
+    position: relative;
+
+    display: inline-block;
+
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    padding: 0;
+
+    cursor: pointer;
+}
+.slick-dots li button
+{
+    font-size: 0;
+    line-height: 0;
+
+    display: block;
+
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+
+    cursor: pointer;
+
+    color: transparent;
+    border: 0;
+    outline: none;
+    background: transparent;
+}
+.slick-dots li button:hover,
+.slick-dots li button:focus
+{
+    outline: none;
+}
+
+.slick-dots li button:before
+{
+    font-family: 'slick';
+    font-size: 6px;
+    line-height: 20px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 20px;
+    height: 20px;
+
+    content: '•';
+    text-align: center;
+
+    opacity: .25;
+    color: black;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.slick-dots li.slick-active button:before
+{
+    opacity: .75;
+    color: black;
+}
+
+
+/* ---------------------theme adjustments----------------- */
 .slick-slider {
     margin-top: 60px;
   }
   
   .slick-prev, .slick-next {
     left: 50%;
-    transform: translate(-50%, 0) rotate(90deg);
+    
+    width:.15em;
+    height: .15em;
+    background-image: url('../../images/arrow2.png');
+    background-size: 100% 100%;
+    outline-color: var(--standout);
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 20em;
+    /* border-radius: 50%; */
+    /* border: solid gold 3px; */
+    /* background-color: black; */
     
   }
   .slick-next {
-    top: unset;
-    bottom: -30px;
-    outline-color: var(--standout);
+    position: relative;
+    top: 70%;
+    /* bottom: -30px; */
+    margin-top: -150%;
+    transform: translate(-50%, 0) rotate(90deg);
+    margin-left: 20vw;
   }
   .slick-prev {
     top: -30px;
+    margin-top: 40%;
+    transform: translate(50%, 0) rotate(270deg);
+    margin-left: 12vw;
   }
 
   .slick-prev:before, .slick-next:before {
     color: var(--standout);
     
   }
+  
 
 
   /* ----------------------old projects------------- */
@@ -32,15 +233,16 @@
     height: auto;
     background-color: black;
     z-index: 3;
+    
 }
 
 .ProCluster{
     width: 24vh;
-    height: 24vh;
+    height: 15vh;
     position: relative;
-    border-style: outset;
-    border-width: 6px;
-    border-color: rgb(9, 86, 111);
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
     border-radius: 10px;
     /* background-color: rgba(15, 15, 78, 0.972);  */
     overflow: hidden;
@@ -62,6 +264,15 @@
 #nerd{
   background-image: url('../../images/nerdverse.webp');
   background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+.project{
+  background-image: url('../../images/wood2.png');
+width:100vw;
+margin: 10vh 0;
+margin-left: -5vw;
+padding: 30px 20px;
+display: flex;
 }
 
 
