--- a/src/style/style.css
+++ b/src/style/style.css
@@ -46,11 +46,9 @@ body {
     text-shadow: silver .5px .5px;
   }
   .test{
-   background-image: url('../images/nerdverse.webp') ;
+   background-image: url('../images/sky.png') ;
    background-size: 100% 100%;
-   height: 40%;
-   
-     
+   height: 40%; 
   }
 
  
