--- a/src/components/Projects/slick.css
+++ b/src/components/Projects/slick.css
@@ -184,34 +184,43 @@
   
   .slick-prev, .slick-next {
     left: 50%;
-    
-    width:.15em;
-    height: .15em;
-    background-image: url('../../images/arrow2.png');
+    /* z-index: -1; */
+    width:.2em;
+    height: .2em;
+    background-image: url('../../images/play2.png');
     background-size: 100% 100%;
-    outline-color: var(--standout);
+    background-color: rgba(172, 150, 150, 0.762);
     text-indent: 100%;
     white-space: nowrap;
     overflow: hidden;
     font-size: 20em;
+    border-radius: 50%;
     /* border-radius: 50%; */
     /* border: solid gold 3px; */
     /* background-color: black; */
-    
+    --neon-border-color: rgba(12, 116, 206, 0.83);
+    box-shadow:
+            0 0 .5rem #fff,
+            inset 0 0 .5rem #fff,
+            0 0 .5rem var(--neon-border-color),
+            inset 0 0 .5rem var(--neon-border-color),
+            0 0 .5rem var(--neon-border-color),
+            inset 0 0 .5rem var(--neon-border-color);   
   }
   .slick-next {
     position: relative;
     top: unset;
     bottom: 10px;
-    transform: translate(-50%, 0) rotate(90deg);
+    transform: translate(-50%, 0) rotate(180deg);
     /* margin-top: -150%;
     transform: translate(-50%, 0) rotate(90deg);
     margin-left: 20vw; */
+    border-right: none;
   }
   .slick-prev {
-    top: -60px;
+    top: -70px;
     /* margin-top: 40%; */
-    transform: translate(-50%, 0) rotate(270deg);
+    transform: translate(-50%, 0) rotate(0deg);
     /* margin-left: 12vw; */
   }
 
@@ -219,10 +228,13 @@
     color: var(--standout);
     
   }
-  
+  .slick-prev:hover, .slick-next:hover{
+    --neon-border-color: rgb(205, 226, 13);  
+  }
+ 
 
 
-  /* ----------------------old projects------------- */
+  /* ----------------------projects------------- */
   
 
 
@@ -236,16 +248,20 @@
 }
 
 .ProCluster{
-    width: 20vh;
+    width: 100%;
     height: 15vh;
     position: relative;
     border-style: solid;
     border-width: 3px;
-    border-color: black;
+    border-color: rgb(22, 9, 1);
+    background-color: black;
     border-radius: 10px;
-    /* background-color: rgba(15, 15, 78, 0.972);  */
+    padding: 0;
     overflow: hidden;
-    background-image: url('../../images/marble.webp');
+    cursor: pointer;
+}
+.ProCluster:hover{
+    border: yellow 3px solid;
 }
 #proText{
   text-align: center;
@@ -266,12 +282,16 @@
   background-repeat: no-repeat;
 }
 .project{
-  background-image: url('../../images/wood2.png');
-width:100vw;
+  /* background-image: url('../../images/wood2.png'); */
+background-color: var(--Tv);
+width:98vw;
+height: 100vh;
 margin: 10vh 0;
-margin-left: -5vw;
-padding: 30px 20px;
+/* margin-left: -5vw; */
+padding: 10vh 20px;
 display: flex;
+ 
 }
+
 
 
