--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,7 +1,8 @@
 body {
     --bg: white;
-    --bg2: rgba(167, 209, 240, 0.891);
-    --nav: rgb(17, 110, 193);
+    --bg2: rgb(26, 48, 64);
+    --bg3: black;
+    --nav: rgb(5, 57, 103);
     --textNormal: #222;
     --textTitle: #222;
     --text: darkgrey;
@@ -9,25 +10,34 @@ body {
     --standout: rgb(145, 53, 53) ;
     --hr: hsla(0, 0%, 0%, 0.2);
     --dropshadow: black;
+    --tv:rgba(255, 255, 255, 0.585);
+    --Tv:black;
     background-color: var(--bg);
     --textShadow: black 1px 1px;
     --highlight:gold;
+    width: 100vw;
+    overflow: hidden;
   }
   
   body.dark {
     -webkit-font-smoothing: antialiased;
     --nav : black;
     --bg: rgb(62, 53, 53);
-    
+    --bg2: rgb(115, 7, 16);
+    --bg3: #868e96;
     --textNormal: rgba(255, 255, 255, 0.88);
     --textTitle: white;
-    --textLink: yellow;
+    --textLink: rgb(234, 235, 224);
+    --tv:rgb(231, 233, 215);
+    --Tv:rgb(128, 20, 20);
     --hr: hsla(0, 0%, 100%, 0.2);
     --text: rgb(16, 107, 164);
     --text2: rgb(108, 108, 238);
     --standout: rgb(214, 204, 146) ;
     --textShadow: rgba(248, 237, 237, 0.653) .7px .7px;
   }
+
+  @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 
 
@@ -45,10 +55,18 @@ body {
     color: rgb(38, 109, 209);
     text-shadow: silver .5px .5px;
   }
-  .test{
-   background-image: url('../images/sky.png') ;
-   background-size: 100% 100%;
+  .TvBackground{
    height: 40%; 
+  }
+  .computer{
+    font-family: 'Press Start 2P', cursive;
+
+  }
+  element.style{
+    padding: 0;
+  }
+  .skillz{
+    border-color: blue;
   }
 
  
