--- a/src/style/style.css
+++ b/src/style/style.css
@@ -10,10 +10,10 @@ body {
     --standout: rgb(145, 53, 53) ;
     --hr: hsla(0, 0%, 0%, 0.2);
     --dropshadow: black;
-    --tv:rgba(255, 255, 255, 0.585);
-    --Tv:black;
+    --tv:none;
+    --Tv:rgb(66, 56, 56);
     background-color: var(--bg);
-    --textShadow: black 1px 1px;
+    --textShadow: rgb(33, 102, 198) 1px 1px;
     --highlight:gold;
     width: 100vw;
     overflow: hidden;
@@ -31,10 +31,10 @@ body {
     --tv:rgb(231, 233, 215);
     --Tv:rgb(128, 20, 20);
     --hr: hsla(0, 0%, 100%, 0.2);
-    --text: rgb(16, 107, 164);
+    --text: white;
     --text2: rgb(108, 108, 238);
     --standout: rgb(214, 204, 146) ;
-    --textShadow: rgba(248, 237, 237, 0.653) .7px .7px;
+    --textShadow: rgb(230, 25, 25) .7px .7px;
   }
 
   @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
