--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -22,7 +22,7 @@
 
 .contact-title, .contact-subTitle{
     width: auto;
-    margin: 25% auto 10% auto;
+    margin: 12vh auto 10% auto;
     font-size: 1.2em;
 }
 .contactIcons > svg{
@@ -30,14 +30,13 @@
   }
   .contactIcons:hover{
     background-color: var(--highlight);
-    color: rgb(245, 236, 236);
   }
   .contactIcons .IconSpan{
     visibility: hidden;
     width: 120px;
     /* background-color: black; */
-    color: var(--highlight);
-    text-shadow: .5px .5px black;
+    color: var(--text);
+    text-shadow: var(--highlight) .7px .5px;
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
@@ -49,6 +48,12 @@
     top: 100%;
     left: 50%;
     margin-left: -60px;
+  }
+  .IconSpan{
+    background-color: var(--bg2);
+    border-radius: 50px;
+    padding: 0;
+    width: min-content;
   }
   .contactIcons:hover .IconSpan{
     visibility: visible;
