--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,41 +1,41 @@
 body {
     --bg: white;
-    --bg2: rgb(43, 44, 49);
+    --bg2: rgb(175, 186, 187);
     --bg3: black;
     --nav: rgb(5, 57, 103);
     --textNormal: #222;
     --textTitle: rgb(125, 108, 108);
-    --text: darkgrey;
+    --text: rgb(28, 50, 193);
     --text2: rgb(132, 228, 247);
     --standout:  rgb(214, 204, 146);
     --tv:none;
-    --Tv:rgb(66, 56, 56);
-    --textShadow: rgb(33, 102, 198) .5px 1px;
-    --highlight:rgb(30, 185, 220);
+    --Tv:rgb(78, 82, 84);
+    --textShadow: rgb(14, 136, 213) .5px .6px;
+    --highlight:rgb(65, 150, 235);
     width: 100vw;
     overflow: hidden;
      background-color: var(--bg);
-     --neon:rgb(10, 59, 233);
+     --neon:rgb(10, 129, 233);
   }
   
   body.dark {
     -webkit-font-smoothing: antialiased;
     --nav : rgb(86, 12, 12);
     --bg: rgb(62, 53, 53);
-    --bg2: rgba(44, 28, 29, 0.762);
-    --bg3: #443b3e;
+    --bg2: rgb(3, 60, 88);
+    --bg3: #faf6f8;
     --textNormal: rgba(255, 255, 255, 0.88);
     --textTitle: white;
     --textLink: rgb(234, 235, 224);
     --tv:rgb(231, 233, 215);
-    --Tv:rgb(128, 20, 20);
+    --Tv:rgb(110, 83, 83);
     --hr: hsla(0, 0%, 100%, 0.2);
     --text: rgb(193, 184, 184);
     --text2: rgb(241, 138, 120);
     --standout: rgb(6, 121, 193) ;
     --textShadow: rgb(225, 30, 30) .7px .7px;
-    --highlight:rgb(174, 10, 23);
-    --neon:rgb(96, 15, 15);
+    --highlight:rgb(115, 124, 133);
+    --neon:rgb(217, 213, 226);
   }
 
   @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
