--- a/src/components/softwareSkills/SoftwareSkill.css
+++ b/src/components/softwareSkills/SoftwareSkill.css
@@ -1,49 +1,49 @@
+.software-skills{
+  width: 100vw;
+  position: fixed;
+  top: 5%;
+  display: inline-block;
+  z-index: -999;
+}
 .dev-icons {
-  padding-left: 0;
+  margin: 0;
   list-style: none;
-  font-size: 3rem;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  font-size: 4rem;
   text-align: center;
   display: flex;
   flex-wrap: wrap;
- 
+  width: 100vw;
 }
 .imgSkills{
-  max-width: 10vw;
-  /* background-color: red; */
-  margin: 10px;
+  width: 10vw;
   display: block;
 }
 
 .bgIcon {
   color: var(--bg3);
   font-size: .5em;
-  margin: 20px;
   opacity: .4;
   text-align: center;
-  /* display: block; */
-  /* background-color: blue; */
 }
-.software-skills{
-  /* width: 80vw; */
-  position: fixed;
-  top: 10%;
-  display: inline-block;
-  z-index: -999;
-}
-.skillz{
-  /* background-color: blue; */
-  z-index: 99999;
-  height: 100vh;
-  width: 100vw;
-  position: relative;
-  top: 100vh;
-}
+
+
 .bgSpan{
-  margin-top: -35px;
+  margin-top: -30px;
   font-size: .2em;
   color: var(--bg3);
   text-shadow: none;
   opacity: .4;
+  text-align: center;
+}
+
+@media only screen and (max-width: 500px) {
+ .dev-icons{
+   font-size: 5em;
+ }
+ .bgSpan{
+  display: none;
+}
+.imgSkills{
+  width: 25vw;
+}
 }
