--- a/src/style/style.css
+++ b/src/style/style.css
@@ -13,7 +13,8 @@ body {
     --textShadow: rgb(14, 136, 213) .5px .6px;
     --highlight:rgb(65, 150, 235);
     width: 100vw;
-    overflow: hidden;
+    max-width: 100vw;
+    overflow-x: hidden;
      background-color: var(--bg);
      --neon:rgb(10, 129, 233);
   }
@@ -81,7 +82,7 @@ body {
     font-weight: 700;
     background-color: black;
     height: fit-content;
-    min-width: 4em;
+    width: fit-content;
     margin: .5em 0  0 15px;
   }
   .stripped:hover{
