--- a/src/style/style.css
+++ b/src/style/style.css
@@ -111,6 +111,7 @@ body {
     height: 40vw;
     width: 40vw;
     margin: 0;
+    flex-wrap: wrap;
   }
 
   @media only screen and (min-width: 600px) {
@@ -121,6 +122,7 @@ body {
     }
   
   }
+  
 
   
 
