--- a/src/style/style.css
+++ b/src/style/style.css
@@ -38,6 +38,7 @@ body {
     --highlight:rgb(101, 4, 4);
     --neon:rgb(217, 213, 226);
   }
+  @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
 
 
 
