--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,7 +6,7 @@ body {
     --textNormal: #222;
     --textTitle: rgb(125, 108, 108);
     --text: rgb(28, 50, 193);
-    --text2: rgb(132, 228, 247);
+    --text2: rgb(61, 136, 228);
     --standout:  rgb(223, 10, 10);
     --tv:none;
     --Tv:rgb(78, 82, 84);
@@ -22,17 +22,17 @@ body {
   body.dark {
     -webkit-font-smoothing: antialiased;
     --nav : rgb(86, 12, 12);
-    --bg: rgb(62, 53, 53);
+    --bg: rgb(115, 114, 114);
     --bg2: rgb(3, 60, 88);
-    --bg3: #faf6f8;
+    --bg3: rgb(3, 60, 88);
     --textNormal: rgba(255, 255, 255, 0.88);
     --textTitle: white;
     --textLink: rgb(234, 235, 224);
     --tv:rgb(231, 233, 215);
-    --Tv:rgb(110, 83, 83);
+    --Tv:rgb(122, 193, 228);
     --hr: hsla(0, 0%, 100%, 0.2);
     --text: rgb(193, 184, 184);
-    --text2: rgb(241, 138, 120);
+    --text2: rgb(250, 241, 240);
     --standout: rgb(6, 121, 193) ;
     --textShadow: rgb(225, 30, 30) .7px .7px;
     --highlight:rgb(101, 4, 4);
