compressed photos and adjusted colors for better visiblity

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -58,9 +58,11 @@
     border-radius: 50px;
     padding: 0;
     width: min-content;
+    
   }
   .contactIcons:hover .IconSpan{
     visibility: visible;
+    color: var(--text);
   }
   @media only screen and (max-width: 500px) {
     .contact-title, .contact-subTitle{
