--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,16 +1,16 @@
 body {
     --bg: white;
-    --bg2: rgb(175, 186, 187);
-    --bg3: black;
-    --nav: rgb(5, 57, 103);
+    --bg2: rgb(92, 183, 191);
+    --bg3: rgb(92, 183, 191);
+    --nav: rgb(57, 59, 61);
     --textNormal: #222;
     --textTitle: rgb(125, 108, 108);
-    --text: rgb(28, 50, 193);
-    --text2: rgb(61, 136, 228);
+    --text: rgb(18, 20, 20);
+    --text2: rgb(14, 17, 88);
     --standout:  rgb(223, 10, 10);
     --tv:none;
-    --Tv:rgb(78, 82, 84);
-    --textShadow: rgb(14, 136, 213) .5px .6px;
+    --Tv:rgba(165, 178, 193, 0.449);
+    --textShadow: rgb(217, 228, 235) .5px 1px 1px;
     --highlight:rgb(65, 150, 235);
     width: 100vw;
     max-width: 100vw;
@@ -26,16 +26,16 @@ body {
     --bg2: rgb(3, 60, 88);
     --bg3: rgb(3, 60, 88);
     --textNormal: rgba(255, 255, 255, 0.88);
-    --textTitle: white;
+    --textTitle: rgb(182, 49, 49);
     --textLink: rgb(234, 235, 224);
     --tv:rgb(231, 233, 215);
     --Tv:rgb(122, 193, 228);
     --hr: hsla(0, 0%, 100%, 0.2);
-    --text: rgb(193, 184, 184);
+    --text: rgb(240, 230, 230);
     --text2: rgb(250, 241, 240);
     --standout: rgb(6, 121, 193) ;
-    --textShadow: rgb(225, 30, 30) .7px .7px;
-    --highlight:rgb(101, 4, 4);
+    --textShadow: rgb(101, 15, 15) 1px 1px 4px;
+    --highlight:rgb(98, 85, 85);
     --neon:rgb(217, 213, 226);
   }
   @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
